# fpm

./: Cargo.toml  readme.md  shell.nix
src/: main.rs
src/api/: package.rs
src/types/: args.rs  mod.rs  package.rs
tests/: package.xml  real-package.xml  test-package.xml
tests/a/: package.json
tests/b/: package.json
tests/c/: package.json
tests/d/: package.json
tests/local/: package.json
