[package]
name = "fpm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.49"
clap_derive = "4.5.49"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.145"
tokio = "1.48.0"
url = "2.5.7"
